--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -60,7 +60,15 @@
     "sonner": "^2.0.7",
     "uploadthing": "^7.7.4",
     "vaul": "^1.1.2",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zustand": "^5.0.8",
+    "framer-motion": "^11.0.0",
+    "marked": "^12.0.0",
+    "react-markdown": "^9.0.0",
+    "remark-gfm": "^4.0.0",
+    "html-react-parser": "^5.0.0",
+    "shiki": "^1.0.0",
+    "@radix-ui/react-toolbar": "^1.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
