--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,40 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ariakit/react": "^0.4.20",
+    "@dnd-kit/core": "^6.0.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.0.0",
+    "@faker-js/faker": "^10.1.0",
     "@hookform/resolvers": "^5.2.2",
+    "@monaco-editor/react": "^4.7.0",
+    "@platejs/ai": "^52.0.4",
+    "@platejs/autoformat": "^52.0.1",
+    "@platejs/basic-nodes": "^52.0.1",
+    "@platejs/basic-styles": "^52.0.1",
+    "@platejs/callout": "^52.0.1",
+    "@platejs/caption": "^52.0.1",
+    "@platejs/code-block": "^52.0.1",
+    "@platejs/comment": "^52.0.1",
+    "@platejs/date": "^52.0.1",
+    "@platejs/dnd": "^52.0.1",
+    "@platejs/docx": "^52.0.1",
+    "@platejs/emoji": "^52.0.2",
+    "@platejs/excalidraw": "^52.0.1",
+    "@platejs/juice": "^52.0.1",
+    "@platejs/layout": "^52.0.1",
+    "@platejs/link": "^52.0.1",
+    "@platejs/list": "^52.0.1",
+    "@platejs/markdown": "^52.0.4",
+    "@platejs/math": "^52.0.1",
+    "@platejs/media": "^52.0.1",
+    "@platejs/mention": "^52.0.1",
+    "@platejs/slash-command": "^52.0.1",
+    "@platejs/suggestion": "^52.0.1",
+    "@platejs/table": "^52.0.1",
+    "@platejs/toc": "^52.0.1",
+    "@platejs/toggle": "^52.0.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -39,44 +72,68 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-toolbar": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-visually-hidden": "^1.2.4",
     "@tanstack/react-query": "^5.90.11",
+    "@tiptap/core": "^3.11.1",
+    "@tiptap/extension-image": "^3.11.1",
+    "@tiptap/extension-mention": "^3.11.1",
+    "@tiptap/extension-placeholder": "^3.11.1",
+    "@tiptap/extension-text-style": "^3.11.1",
+    "@tiptap/react": "^3.11.1",
+    "@tiptap/starter-kit": "^3.11.1",
+    "@udecode/cn": "^52.0.1",
     "@uploadthing/react": "^7.3.3",
     "@workspace/ui": "workspace:*",
+    "ai": "^5.0.104",
+    "axios": "^1.7.0",
+    "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^11.0.0",
+    "html-react-parser": "^5.0.0",
+    "html2canvas-pro": "^1.5.13",
     "input-otp": "^1.4.2",
+    "konva": "^9.0.0",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.475.0",
+    "marked": "^12.0.0",
+    "mutative": "^1.3.0",
+    "nanoid": "^5.1.6",
     "next": "^15.4.5",
     "next-themes": "^0.4.6",
+    "pdf-lib": "^1.17.1",
+    "platejs": "^52.0.1",
     "react": "^19.1.1",
     "react-day-picker": "^9.11.2",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.1",
+    "react-konva": "^18.0.0",
+    "react-lite-youtube-embed": "^3.3.3",
+    "react-markdown": "^9.0.0",
+    "react-player": "^3.4.0",
     "react-resizable-panels": "^3.0.6",
+    "react-rnd": "^10.5.2",
+    "react-tweet": "^3.2.2",
     "recharts": "2.15.4",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
+    "shiki": "^1.0.0",
+    "slate": "^0.118.1",
+    "slate-dom": "^0.119.0",
     "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "tippy.js": "^6.3.7",
     "uploadthing": "^7.7.4",
+    "use-file-picker": "^2.0.0",
+    "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2",
     "zod": "^3.25.76",
-    "zustand": "^5.0.8",
-    "framer-motion": "^11.0.0",
-    "marked": "^12.0.0",
-    "react-markdown": "^9.0.0",
-    "remark-gfm": "^4.0.0",
-    "html-react-parser": "^5.0.0",
-    "shiki": "^1.0.0",
-    "@radix-ui/react-toolbar": "^1.1.0",
-    "konva": "^9.0.0",
-    "react-konva": "^18.0.0",
-    "axios": "^1.7.0",
-    "use-file-picker": "^2.0.0",
-    "@dnd-kit/core": "^6.0.0",
-    "@dnd-kit/sortable": "^8.0.0",
-    "@dnd-kit/utilities": "^3.0.0",
-    "@dnd-kit/modifiers": "^7.0.0"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
