feat(web): add component showcase and migrate remaining pages
- Add comprehensive component showcase system with CodeBlock, ComponentDetail, ComponentGrid, ComponentPreview, and ComponentSidebar components
- Add component registry and categories data structure for organizing UI components
- Add example implementations for Button, Card, and Input components
- Add useComponentSearch hook for filtering and searching components
- Add code formatter utility for syntax highlighting and formatting
- Add PropsTable component for displaying component prop documentation
- Migrate legal pages (privacy, terms, cookies) with proper layout structure
- Migrate email management pages (unsubscribe, unsubscribed)
- Migrate sketch page for design exploration
- Migrate components showcase page with full feature set
- Migrate websites detail page with dynamic routing
- Migrate user profile page (me)
- Add custom error boundary page for error handling
- Add not-found page for 404 handling
- Update editor kit and AI plugin configurations
- Update migration tasks documentation to reflect completed work
- Add required dependencies to package.json

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -41,6 +41,7 @@
     "@platejs/math": "^52.0.1",
     "@platejs/media": "^52.0.1",
     "@platejs/mention": "^52.0.1",
+    "@platejs/selection": "^52.0.1",
     "@platejs/slash-command": "^52.0.1",
     "@platejs/suggestion": "^52.0.1",
     "@platejs/table": "^52.0.1",
@@ -95,6 +96,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.0.0",
+    "fuse.js": "^7.1.0",
     "html-react-parser": "^5.0.0",
     "html2canvas-pro": "^1.5.13",
     "input-otp": "^1.4.2",
