feat(editor): add emoji support and type safety improvements
- Add emoji mart dependencies (@emoji-mart/data and @emoji-mart/react) for emoji picker functionality
- Add @platejs/indent plugin for improved text indentation support
- Add react-dnd and react-dnd-html5-backend for drag-and-drop functionality
- Add explicit type annotations (any[]) to editor kit exports with ESLint disable comments for type safety
- Update BaseEditorKit, CopilotKit, EmojiKit, and MarkdownKit exports with proper TypeScript typing
- Update migration task checklist to reflect completed import path cleanup and validation work
- Update pnpm-lock.yaml with new dependency versions and resolutions

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,8 @@
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.0.0",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@faker-js/faker": "^10.1.0",
     "@hookform/resolvers": "^5.2.2",
     "@monaco-editor/react": "^4.7.0",
@@ -33,6 +35,7 @@
     "@platejs/docx": "^52.0.1",
     "@platejs/emoji": "^52.0.2",
     "@platejs/excalidraw": "^52.0.1",
+    "@platejs/indent": "^52.0.1",
     "@platejs/juice": "^52.0.1",
     "@platejs/layout": "^52.0.1",
     "@platejs/link": "^52.0.1",
@@ -112,6 +115,8 @@
     "platejs": "^52.0.1",
     "react": "^19.1.1",
     "react-day-picker": "^9.11.2",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.1",
     "react-konva": "^18.0.0",
