--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/react": "^2.0.104",
     "@ariakit/react": "^0.4.20",
     "@dnd-kit/core": "^6.0.0",
     "@dnd-kit/modifiers": "^7.0.0",
