--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-  "tailwindCSS.experimental.configFile": "packages/ui/src/styles/globals.css",
-  "typescript.autoClosingTags": false
+  "tailwindCSS.experimental.configFile": "packages/ui/src/styles/globals.css"
 }
