--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,3 @@
 {
-  "installCommand": "yarn install",
-  "buildCommand": "turbo run build --filter=web",
-  "outputDirectory": "apps/web/.next"
+  "$schema": "https://openapi.vercel.sh/vercel.json"
 }
