--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "type": "module",
   "private": true,
+  "packageManager": "yarn@4.5.1",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
