chore(deployment): add package extensions and Vercel build configuration
- Add package extensions for @emoji-mart/react and @radix-ui/react-tabs to resolve peer dependency warnings
- Create vercel.json with explicit build and install commands for monorepo deployment
- Enable corepack and specify yarn as package manager in Vercel configuration
- Ensure consistent dependency resolution across deployment environments

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,3 +3,12 @@ nodeLinker: node-modules
 enableGlobalCache: false
 
 nmHoistingLimits: workspaces
+
+packageExtensions:
+  "@emoji-mart/react@*":
+    peerDependencies:
+      react: "*"
+  "@radix-ui/react-tabs@*":
+    peerDependencies:
+      react: "*"
+      react-dom: "*"
