chore(yarn): upgrade to yarn 4.7.0 and update configuration
- Add yarn 4.7.0 release binary to .yarn/releases directory
- Update .yarnrc.yml configuration for new yarn version
- Update package.json dependencies and scripts for yarn 4.7.0 compatibility
- Update root package.json to reflect yarn version upgrade
- Ensures monorepo uses latest yarn features and improvements

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,8 +1,8 @@
-nodeLinker: node-modules
-
 enableGlobalCache: false
 
 nmHoistingLimits: workspaces
+
+nodeLinker: node-modules
 
 packageExtensions:
   "@emoji-mart/react@*":
@@ -12,3 +12,5 @@ packageExtensions:
     peerDependencies:
       react: "*"
       react-dom: "*"
+
+yarnPath: .yarn/releases/yarn-4.7.0.cjs
