feat(backend): add Go backend service with LiveKit integration
- Add Go module configuration with Echo framework and LiveKit SDK dependencies
- Create server.go entry point for backend service initialization
- Add package.json for backend service metadata and scripts
- Add .env.example with LiveKit configuration template
- Update root package.json to include backend workspace
- Update turbo.json to configure backend build pipeline
- Update yarn.lock with new dependencies
This establishes the foundation for the backend service with real-time communication capabilities via LiveKit.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "turbo build",
     "dev": "turbo watch dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",    
+    "env-check": "node -e \"console.log('LOCALAPPDATA=', process.env.LOCALAPPDATA, 'GOCACHE=', process.env.GOCACHE)\""
   },
   "devDependencies": {
     "@workspace/eslint-config": "workspace:*",
