chore(monorepo): migrate from yarn to pnpm package manager
- Update packageManager from yarn@4.7.0 to pnpm@9.15.0 in package.json
- Remove workspaces configuration from package.json (handled by pnpm natively)
- Remove Go environment variables from turbo.json build task configuration
- Delete yarn.lock file as pnpm uses pnpm-lock.yaml for dependency management
- Simplify monorepo setup by leveraging pnpm's native workspace support

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "go run server.go",
+    "dev": "node run-go.js",
     "env-check": "node -e \"console.log('LOCALAPPDATA=', process.env.LOCALAPPDATA, 'GOCACHE=', process.env.GOCACHE)\""
   },
   "author": "",
