--- a/package.json
+++ b/package.json
@@ -2,11 +2,7 @@
   "name": "shadcn-ui-monorepo",
   "version": "0.0.1",
   "private": true,
-  "packageManager": "yarn@4.7.0",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
+  "packageManager": "pnpm@9.15.0",
   "scripts": {
     "build": "turbo build",
     "dev": "turbo watch dev",
