--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,4 +1,4 @@
 # LiveKit Configuration
-LIVEKIT_HOST=https://your-project.livekit.cloud
-LIVEKIT_API_KEY=your-api-key
-LIVEKIT_API_SECRET=your-api-secret
+LIVEKIT_URL=
+LIVEKIT_API_KEY=
+LIVEKIT_API_SECRET=
