--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "@emoji-mart/react": "^1.1.1",
     "@faker-js/faker": "^10.1.0",
     "@hookform/resolvers": "^5.2.2",
+    "@livekit/components-react": "^2.9.16",
     "@monaco-editor/react": "^4.7.0",
     "@platejs/ai": "^52.0.4",
     "@platejs/autoformat": "^52.0.1",
