chore(docker): migrate to pnpm and add Go backend containerization
- Update Dockerfile to use pnpm@9.15.0 instead of yarn@4.5.1
- Add build and runtime dependencies for native modules (canvas, cairo, pango, etc.)
- Create new Dockerfile.backend for Go application with multi-stage build
- Update Dockerfile.mastra to use pnpm@9.15.0 with Node 22 Alpine
- Add backend service to docker-compose.yml with health checks
- Update build.sh script to support building backend service independently
- Update deploy.sh script to handle backend deployment alongside web and mastra
- Improve Docker layer caching and reduce final image sizes with optimized builds

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,26 @@ services:
     networks:
       - app-network
 
+  # Go Backend API
+  backend:
+    build:
+      context: .
+      dockerfile: Dockerfile.backend
+    container_name: go-backend
+    restart: unless-stopped
+    ports:
+      - "${BACKEND_PORT:-8080}:8080"
+    env_file:
+      - .env
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+    networks:
+      - app-network
+
   # Mastra AI Backend
   mastra:
     build:
