--- a/Dockerfile.mastra
+++ b/Dockerfile.mastra
@@ -1,10 +1,10 @@
 # ================================
-# Stage 1: Base image with yarn (Node 22 required for Mastra)
+# Stage 1: Base image with pnpm (Node 22 required for Mastra)
 # ================================
 FROM node:22-alpine AS base
 
-# Enable corepack for yarn
-RUN corepack enable && corepack prepare yarn@4.5.1 --activate
+# Enable corepack for pnpm
+RUN corepack enable && corepack prepare pnpm@9.15.0 --activate
 
 # Set working directory
 WORKDIR /app
@@ -15,13 +15,13 @@ WORKDIR /app
 FROM base AS deps
 
 # Copy package files for dependency installation
-COPY package.json yarn.lock .yarnrc.yml ./
+COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 COPY apps/mastra/package.json ./apps/mastra/
 COPY packages/eslint-config/package.json ./packages/eslint-config/
 COPY packages/typescript-config/package.json ./packages/typescript-config/
 
 # Install dependencies with frozen lockfile
-RUN yarn install --immutable
+RUN pnpm install --frozen-lockfile
 
 # ================================
 # Stage 3: Build the application
@@ -39,15 +39,15 @@ COPY . .
 
 # Build Mastra application
 WORKDIR /app/apps/mastra
-RUN yarn build
+RUN pnpm build
 
 # ================================
 # Stage 4: Production runner
 # ================================
 FROM node:22-alpine AS runner
 
-# Install yarn for runtime
-RUN corepack enable && corepack prepare yarn@4.5.1 --activate
+# Install pnpm for runtime
+RUN corepack enable && corepack prepare pnpm@9.15.0 --activate
 
 WORKDIR /app
 
@@ -82,4 +82,4 @@ ENV HOSTNAME="0.0.0.0"
 ENV PORT=4111
 
 # Start Mastra server
-CMD ["yarn", "start"]
+CMD ["pnpm", "start"]
