feat(health): add comprehensive health check endpoints for backend and web services
- Add detailed HealthResponse struct to backend with status, service, timestamp, uptime, version, and Go version information
- Implement enhanced HealthCheck handler in backend with runtime metrics and uptime tracking
- Add /health endpoint to backend router alongside existing root endpoint
- Create health check API route for web service with Node.js version and environment info
- Add healthcheck.sh script for monitoring service availability
- Provide consistent health check response format across backend and web services for better observability

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,6 +19,12 @@ services:
       - web
       - backend
       - mastra
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:80/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
     networks:
       - app-network
 
@@ -48,7 +54,7 @@ services:
     env_file:
       - .env
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/api/health"]
       interval: 30s
       timeout: 10s
       retries: 3
