--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        - NEXT_PUBLIC_CONVEX_URL=${NEXT_PUBLIC_CONVEX_URL}
     container_name: web-app
     restart: unless-stopped
     ports:
@@ -12,8 +14,11 @@ services:
     environment:
       - NODE_ENV=production
       - HOSTNAME=0.0.0.0
+      - NEXT_PUBLIC_CONVEX_URL=${NEXT_PUBLIC_CONVEX_URL}
+      - AUTH_SECRET=${AUTH_SECRET}
+      - CONVEX_SITE_URL=${CONVEX_SITE_URL}
     env_file:
-      - .env
+      - apps/web/.env.prod
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/api/health"]
       interval: 30s
@@ -30,7 +35,7 @@ services:
     ports:
       - "8080:8080"
     env_file:
-      - .env
+      - apps/backend/.env
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health"]
       interval: 30s
