chore(config): update Convex deployment URL and simplify docker-compose configuration
- Update NEXT_PUBLIC_CONVEX_URL to focused-salamander-537.convex.cloud in production environment
- Remove docker-compose version specification for improved compatibility
- Hardcode Convex URL in docker-compose build args instead of using environment variable
- Remove redundant environment variable declarations (NEXT_PUBLIC_CONVEX_URL, AUTH_SECRET, CONVEX_SITE_URL) that are already defined in .env.prod
- Simplify container configuration by relying on env_file for environment setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
-version: '3.8'
-
 services:
   web:
     build:
       context: .
       dockerfile: Dockerfile
       args:
-        - NEXT_PUBLIC_CONVEX_URL=${NEXT_PUBLIC_CONVEX_URL}
+        - NEXT_PUBLIC_CONVEX_URL=https://focused-salamander-537.convex.cloud
     container_name: web-app
     restart: unless-stopped
     ports:
@@ -14,9 +12,6 @@ services:
     environment:
       - NODE_ENV=production
       - HOSTNAME=0.0.0.0
-      - NEXT_PUBLIC_CONVEX_URL=${NEXT_PUBLIC_CONVEX_URL}
-      - AUTH_SECRET=${AUTH_SECRET}
-      - CONVEX_SITE_URL=${CONVEX_SITE_URL}
     env_file:
       - apps/web/.env.prod
     healthcheck:
