--- a/apps/web/.env.prod
+++ b/apps/web/.env.prod
@@ -1,5 +1,5 @@
 # Deployment used by `npx convex dev`
-CONVEX_DEPLOYMENT=dev:disciplined-spoonbill-460 # team: muhammad-arham, project: web-7d1d3
+CONVEX_DEPLOYMENT=disciplined-spoonbill-460 # team: muhammad-arham, project: web-7d1d3
 
 NEXT_PUBLIC_CONVEX_URL=https://focused-salamander-537.convex.cloud
 
