feat(chat): migrate chat system to Convex backend with session management
- Add Convex chat schema with chatSessions and chatMessages tables
- Create chat.ts with Convex functions for session and message management
- Implement getUserChatSessions, getChatMessages, createChatSession mutations
- Add processChatMessage action for external API integration
- Update useChat hook to use Convex instead of React Query
- Replace assistant component with Convex-based chat system
- Add BACKEND_URL environment variable for external API calls
- Update login page with construction warning alert
- Remove legacy assistant components and chat context
- Add CONVEX_MIGRATION.md documentation with setup and feature details
- Update middleware and package dependencies for Convex integration
- Maintain app intent detection functionality in new chat system

--- a/apps/web/.env.prod
+++ b/apps/web/.env.prod
@@ -6,3 +6,6 @@ NEXT_PUBLIC_CONVEX_URL=https://focused-salamander-537.convex.cloud
 AUTH_SECRET="oXIVdAa1ChZHdbG/40DUVprkX+A8JwRREqUJ2XBZpBQ=" # Added by `npx auth`. Read more: https://cli.authjs.dev
 
 CONVEX_SITE_URL=https://apsaradigital.com
+
+# Backend URL for chat processing
+BACKEND_URL=https://api.apsaradigital.com
