--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -99,6 +99,7 @@
     "@tiptap/starter-kit": "^3.11.1",
     "@udecode/cn": "^52.0.1",
     "@uploadthing/react": "^7.3.3",
+    "@webcontainer/api": "^1.6.1",
     "@workspace/ui": "workspace:*",
     "ai": "^5.0.104",
     "axios": "^1.7.0",
