--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -2,3 +2,15 @@
 LIVEKIT_URL=
 LIVEKIT_API_KEY=
 LIVEKIT_API_SECRET=
+
+# Cloudflare R2 Configuration
+R2_ACCESS_KEY_ID=
+R2_SECRET_ACCESS_KEY=
+R2_BUCKET=
+R2_ENDPOINT=https://<account_id>.r2.cloudflarestorage.com
+R2_PUBLIC_BASE=https://assets.example.com
+
+
+# Unsplash Configuration
+UNSPLASH_ACCESS_KEY=
+UNSPLASH_UTM_SOURCE=
