--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -3,6 +3,9 @@ LIVEKIT_URL=
 LIVEKIT_API_KEY=
 LIVEKIT_API_SECRET=
 
+# CORS Configuration (comma-separated origins, defaults to localhost:3000 and 127.0.0.1:3000)
+CORS_ORIGINS=http://localhost:3000, http://127.0.0.1:3000
+
 # Cloudflare R2 Configuration
 R2_ACCESS_KEY_ID=
 R2_SECRET_ACCESS_KEY=
