refactor(web): centralize WhatsApp CTA URL generation and update service pages
- Extract hardcoded WhatsApp phone number and URL generation into reusable `getWhatsAppUrl()` utility function
- Add `NEXT_PUBLIC_CTA_PHONE_NUMBER` environment variable to `.env.example` for centralized phone number configuration
- Update all service pages (ai-integration, api-development, fix-website, instagram-post, mobile-app-development) to use new utility function
- Replace inline WhatsApp URL construction with consistent utility calls across pricing and hero sections
- Convert notification usage example from TSX to markdown documentation
- Update imports in affected pages to include new utility function
- Improve maintainability by centralizing contact information management

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,9 @@ MASTRA_PORT=4111
 # Add your Next.js environment variables here
 # NEXT_PUBLIC_API_URL=https://api.example.com
 
+# WhatsApp CTA phone number (with country code, e.g., +6289669594959)
+NEXT_PUBLIC_CTA_PHONE_NUMBER=+6289669594959
+
 # ===========================================
 # Mastra AI Backend Settings
 # ===========================================
